# -LoNode

./: .gitignore  Cargo.toml  README.md  TODO.md  config.example.toml
docs/: api.md  architecture.md  plugin-dev.md
docs/deployment/: Dockerfile  lonode.service
examples/plugin-example/: Cargo.toml
examples/plugin-example/src/: lib.rs
lonode/: Cargo.toml
lonode-api/: Cargo.toml
lonode-api/src/: lib.rs  state.rs
lonode-api/src/handlers/: mod.rs  rest.rs  ws.rs
lonode-audio/: Cargo.toml
lonode-audio/src/: frames.rs  lib.rs  opus.rs
lonode-core/: Cargo.toml
lonode-core/src/: lib.rs
lonode-core/src/api/: mod.rs  state.rs
lonode-core/src/api/handlers/: rest.rs  ws.rs
lonode-core/src/audio/: mod.rs  opus.rs
lonode-core/src/config/: extra.rs  mod.rs  sources.rs  types.rs
lonode-core/src/gateway/: actor.rs  mod.rs  op.rs
lonode-core/src/player/: manager.rs
lonode-core/src/plugins/: loader.rs  mod.rs  registry.rs
lonode-core/src/runner/: mod.rs
lonode-core/src/udp/: crypto.rs  mod.rs  rtp.rs
lonode-core/tests/: integration.rs  player.rs
lonode-gateway/: Cargo.toml
lonode-gateway/src/: actor.rs  lib.rs
lonode-plugin-api/: Cargo.toml
lonode-plugin-api/src/: lib.rs  trait.rs  types.rs
lonode-plugin-sponsorblock/: Cargo.toml
lonode-plugin-sponsorblock/src/: client.rs  lib.rs  types.rs
lonode-plugin-sponsorblock/tests/: client.rs
lonode-plugin-tts-google/: Cargo.toml
lonode-plugin-tts-google/src/: client.rs  lib.rs  types.rs
lonode-plugin-tts-google/tests/: client.rs
lonode-runtime/: Cargo.toml
lonode-runtime/src/: lib.rs  runner.rs
lonode-runtime/src/player/: manager.rs  mod.rs  state.rs
lonode-runtime/src/plugins/: loader.rs  registry.rs
lonode-runtime/tests/: integration.rs  player.rs  plugins.rs
lonode-source-apple-music/: Cargo.toml
lonode-source-apple-music/src/: client.rs  lib.rs  resolver.rs
lonode-source-apple-music/tests/: resolver.rs
lonode-source-deezer/: Cargo.toml
lonode-source-deezer/src/: client.rs  lib.rs  resolver.rs
lonode-source-spotify/: Cargo.toml
lonode-source-spotify/src/: client.rs  lib.rs  resolver.rs
lonode-source-spotify/tests/: resolver.rs
lonode-source-yandex-music/: Cargo.toml
lonode-source-yandex-music/src/: client.rs  lib.rs  resolver.rs
lonode-source-yandex-music/tests/: resolver.rs
lonode-source-youtube/: Cargo.toml
lonode-source-youtube/src/: lib.rs  reader.rs  resolver.rs
lonode-source-youtube/tests/: real_video.rs  resolver.rs
lonode-sources/: Cargo.toml
lonode-sources-builtin/: Cargo.toml
lonode-sources-builtin/src/: lib.rs
lonode-sources-builtin/src/http/: mod.rs  radio.rs
lonode-sources-builtin/tests/: sources.rs
lonode-sources/src/: lib.rs  radio.rs  youtube.rs
lonode-udp/: Cargo.toml
lonode-udp/src/: crypto.rs  lib.rs  rtp.rs
lonode/src/: main.rs  sources.rs
