[package]
name = "lonode-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LoNode audio: FrameSource trait and Opus encoder."

[lib]
name = "lonode_audio"
path = "src/lib.rs"

[dependencies]
lonode-core = { path = "../lonode-core" }
opus = "0.3"
anyhow = "1"
