[package]
name = "lonode-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LoNode core: Discord Voice UDP, audio pipeline, runner."

[lib]
name = "lonode_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
anyhow = "1"
xsalsa20poly1305 = { version = "0.9", features = ["std"] }
opus = "0.3"
axum = { version = "0.7", features = ["ws"] }
hyper = "1"

[dev-dependencies]
pretty_assertions = "1"
tower = { version = "0.5", features = ["util"] }
