[package]
name = "lonode-plugin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Public plugin API for LoNode audio sources."

[lib]
name = "lonode_plugin_api"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "rt"] }
