[package]
name = "lonode-plugin-sponsorblock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SponsorBlock plugin for LoNode — skip sponsor segments in YouTube videos."

[lib]
name = "lonode_plugin_sponsorblock"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }
tracing = "0.1"
thiserror = "2"
