[package]
name = "lonode-plugin-tts-google"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Google Cloud Text-to-Speech plugin for LoNode."

[lib]
name = "lonode_plugin_tts_google"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["io-util"] }
tracing = "0.1"
thiserror = "2"
base64 = "0.22"
