[package]
name = "lonode-source-apple-music"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Apple Music source for LoNode — resolve via Apple Music API, play via YouTube matching."

[lib]
name = "lonode_source_apple_music"
path = "src/lib.rs"

[dependencies]
lonode-plugin-api = { path = "../lonode-plugin-api" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["io-util"] }
tracing = "0.1"
thiserror = "2"
