[package]
name = "lonode-source-deezer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deezer source for LoNode — resolve via Deezer API, native streaming."

[lib]
name = "lonode_source_deezer"
path = "src/lib.rs"

[dependencies]
lonode-plugin-api = { path = "../lonode-plugin-api" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
tracing = "0.1"
thiserror = "2"
