[package]
name = "lonode-sources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Built-in audio sources for LoNode (radio, YouTube)."

[lib]
name = "lonode_sources"
path = "src/lib.rs"

# Dependencies will be added in Phase 3 (radio, YouTube).
