[package]
name = "lonode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Self-hosted Discord audio node. Drop-in Lavalink alternative written in Rust."

[[bin]]
name = "lonode"
path = "src/main.rs"

[dependencies]
lonode-core = { path = "../lonode-core" }
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
